<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/phone_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />
    <LinearLayout
        android:id="@+id/phoneAuthFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/fieldPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/fieldVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_verification_code"
            android:inputType="number" />
    </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStartVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:text="@string/start_phone_auth" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonVerifyPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:text="@string/verify_phone_auth" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:text="@string/resend_phone_auth" />


        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signOutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out" />

        </LinearLayout>


    </LinearLayout>
</layout>
